# vkf

./: meson.build
game/: main.cpp  meson.build
shaders/: compile_shaders.sh  frag.spv  meson.build  shader.frag  shader.vert  vert.spv
src/: app.cpp  app.hpp  buffer_transfer.cpp  buffer_transfer.hpp  buffers.cpp  commands.cpp  descriptors.cpp  device.cpp  drawing.cpp  extensions.cpp  framebuffer.cpp  image.cpp  instance.cpp  main.cpp  material.hpp  mesh.cpp  mesh.hpp  pipeline.cpp  queue.cpp  renderpass.cpp  shader.cpp  standard_material.cpp  standard_material.hpp  surface.cpp  swapchain.cpp  sync.cpp  validation.cpp  validation.hpp  vertex.hpp  vertex_buffer.cpp  vulkan_backend.cpp  vulkan_backend.hpp  window.cpp
vkf/: meson.build  vkf.hpp
vkf/buffer/: buffer.cpp  buffer.hpp  index_buffer.cpp  index_buffer.hpp  staging_buffer.cpp  staging_buffer.hpp  uniform_buffer.cpp  uniform_buffer.hpp  vertex_buffer.cpp  vertex_buffer.hpp
vkf/camera/: camera.cpp  camera.hpp
vkf/framework/: framework.cpp  framework.hpp
vkf/helper/: buffer_transfer.cpp  buffer_transfer.hpp
vkf/material/: material.cpp  material.hpp  standard_material.cpp  standard_material.hpp
vkf/mesh/: mesh.cpp  mesh.hpp  vertex.hpp
vkf/renderer/: vk_context.cpp  vk_context.hpp  vulkan_backend.cpp  vulkan_backend.hpp
vkf/texture/: texture.cpp  texture.hpp
vkf/window/: event_handler.hpp  keycode.hpp  mousebutton.hpp  scancode.hpp  window.cpp  window.hpp
